tests/0032-property-get-num.src.err
tests/0032-property-get-num.src:1
ERROR: Expected ';' but got 'foo'
 | 123.foo;
       ^
